Adjust image size to avoid clipping in hover state

--- a/Grid/Diamond-Grid/diamond-grid.css
+++ b/Grid/Diamond-Grid/diamond-grid.css
@@ -8,20 +8,22 @@ body {
 img {
     max-width: 100%;
 }
-
+:root {
+    --gaps: .25rem;
+}
 .gallery {
-    --img-size: 100px;
+    --img-size: calc(100px - var(--gaps) / 2);
     display: grid;
     place-items: center center;
     grid-template-columns: repeat(6, var(--img-size));
     grid-template-rows: repeat(3, var(--img-size));
-    gap: .5em;
+    gap: var(--gaps);
     
     & img {
         aspect-ratio: 1;
         /* height: 100%; */
         object-fit: cover;
-        border-radius: .25rem;
+        border-radius: .5rem;
         grid-column: span 2;
         clip-path: path('M 80 20 C 100 0 100 0 120 20 C 140 40 160 60 180 80 C 200 100 200 100 180 120 C 160 140 140 160 120 180 C 100 200 100 200 80 180 C 60 160 40 140 20 120 C 0 100 0 100 20 80 Z');
         transition:
